# climatecontrol

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yaml
climatecontrol/: __init__.py  cli_utils.py  constants.py  core.py  env_parser.py  exceptions.py  file_loaders.py  fragment.py  logtools.py  processors.py  settings_parser.py  utils.py
climatecontrol/ext/: __init__.py  dataclasses.py  pydantic.py
tests/: conftest.py  test_env_parser.py  test_file_loaders.py  test_fragment.py  test_logging.py  test_settings.py  test_subtree.py
tests/ext/: test_dataclasses.py  test_pydantic.py
