[tool.poetry]
name = "climatecontrol"
version = "0.11.0"
description = "Python library for loading app configurations from files and/or namespaced environment variables."
authors = ["Davis Kirkendall <davis.e.kirkendall@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/daviskirk/climatecontrol"
repository = "https://github.com/daviskirk/climatecontrol"
documentation = "https://github.com/daviskirk/climatecontrol"
keywords = ["climatecontrol", "configuration", "environment"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Utilities",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE", "README.rst", "setup.py", "climatecontrol/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
wrapt = "^1.12"
dacite = { version = "^1.6", optional = true }
pydantic = { version = "^1.7.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
coverage = "^5.4"
tomli = "^2.0.1"
PyYAML = "^6.0"
click = ">=8.0"
invoke = "^1.6.0"
black = "^22.1.0"
mypy = "^0.910"
isort = ">=5.10.1"
flake8 = "^4.0.1"
dacite = "^1.6.0"  # for extras
pydantic = "^1.10.13"  # for extras
types-PyYAML = "^6.0.4"
tomli-w = "^1.0.0"

[tool.poetry.extras]
dataclasses = ["dacite", "pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
