[project]
name = "climatecontrol"
version = "0.12.0"
description = "Python library for loading app configurations from files and/or namespaced environment variables."
authors = [
    {name = "Davis Kirkendall", email = "davis.e.kirkendall@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.10,<4.0"
keywords = ["climatecontrol", "configuration", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "wrapt>=1.14,<2.0",
]

[project.optional-dependencies]
dataclasses = [
    "dacite>=1.6,<2.0",
    "pydantic>=1.7.4,<3.0",
]
dev = [
    "pytest>=6.2.2",
    "pytest-mock>=3.5.1",
    "coverage>=5.4",
    "tomli>=2.0.1",
    "PyYAML>=6.0.1",
    "click>=8.0",
    "invoke>=2.0",
    "black>=22.1.0",
    "mypy>=1.0",
    "isort>=5.10.1",
    "flake8>=6.0",
    "dacite>=1.6.0",
    "pydantic>=1.9.0,<3.0",
    "types-PyYAML>=6.0.4",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/daviskirk/climatecontrol"
Repository = "https://github.com/daviskirk/climatecontrol"
Documentation = "https://github.com/daviskirk/climatecontrol"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climatecontrol"]

[tool.hatch.build.targets.sdist]
include = [
    "/climatecontrol",
    "/LICENSE",
    "/README.rst",
    "/setup.py",
]
